Fixes 1px alignment issue on top of hero
Removes transformation and resets positioning on hero and mast
figures to fix 1px alignment issue at top of viewport.

--- a/assets/sass/components/_hero.sass
+++ b/assets/sass/components/_hero.sass
@@ -45,4 +45,7 @@
     @supports(object-fit: cover)
       height: 100%
       width: 100%
+      transform: none
+      left: 0
+      top: 0
       object-fit: cover
